--- a/CTFWebApp/Views/Problems/Details.cshtml
+++ b/CTFWebApp/Views/Problems/Details.cshtml
@@ -1,14 +1,14 @@
-﻿@model CTFWebApp.Models.Problem
+﻿@model CTFWebApp.Models.SubmitProblemViewModel
 
 @{
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Problem Details</h2>
 
 <div>
-    <h4>Problem</h4>
+    <h4>Solve Problem!</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,15 +29,20 @@
         <dd>
             @Html.DisplayFor(model => model.Points)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Answer)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Answer)
-        </dd>
     </dl>
+    <form asp-action="Details">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="Id" />
+        <div class="form-group">
+            <label asp-for="SubmittedAnswer" class="control-label"></label>
+            <input asp-for="SubmittedAnswer" class="form-control" />
+            <span asp-validation-for="SubmittedAnswer" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+    </form>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
