--- a/CTFWebApp/Views/Problems/Edit.cshtml
+++ b/CTFWebApp/Views/Problems/Edit.cshtml
@@ -35,7 +35,7 @@
                 <span asp-validation-for="Answer" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Submit" class="btn btn-default" />
             </div>
         </form>
     </div>
