--- a/CTFWebApp/Views/Shared/_Layout.cshtml
+++ b/CTFWebApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Teams" asp-action="Index">Teams</a></li>
+                    <li><a asp-area="" asp-controller="Teams" asp-action="Index">Teams List</a></li>
+                    <li><a asp-area="" asp-controller="Teams" asp-action="MyTeam">My Team</a></li>
                     <li><a asp-area="" asp-controller="Problems" asp-action="Index">Problems</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
