--- a/CTFWebApp/Views/Shared/_Layout.cshtml
+++ b/CTFWebApp/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Teams" asp-action="Index">Teams List</a></li>
                     <li><a asp-area="" asp-controller="Teams" asp-action="MyTeam">My Team</a></li>
                     <li><a asp-area="" asp-controller="Problems" asp-action="Index">Problems</a></li>
+                    <li><a href="http://192.168.56.101:3000/wetty/" target="_blank">Shell</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
