--- a/CTFWebApp/Views/Problems/Details.cshtml
+++ b/CTFWebApp/Views/Problems/Details.cshtml
@@ -35,7 +35,7 @@
         <input type="hidden" asp-for="Id" />
         <div class="form-group">
             <label asp-for="SubmittedAnswer" class="control-label"></label>
-            <input asp-for="SubmittedAnswer" class="form-control" />
+            <input asp-for="SubmittedAnswer" placeholder="Give Answer in Format: CTF{FLAG} " class="form-control" />
             <span asp-validation-for="SubmittedAnswer" class="text-danger"></span>
         </div>
         <div class="form-group">
